infra/k8s/21-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ticketing
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: ticketing-app
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: worker
          image: ghcr.io/matej-basic/devops-project-app/worker:latest
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
